# open-dash

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
.github/workflows/: ci.yml  instrumented-tests.yml  lint.yml  release.yml
app/: build.gradle.kts  lint-baseline.xml
app/libs/: voicevoxcore-android-0.16.4.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fil/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hr/: strings.xml
docs/: architecture.md  conventions.md  e2e-testing.md  fast-paths.md  home-dashboard.md  i18n.md  index.md  latency-budgets.md  multi-room-cookbook.md  multi-room-protocol.md  offline-stack-smoke-test.md  phase-16-native-plan.md  privacy.md  providers.md  real-device-smoke-test.md  roadmap.md  smart-speaker-audit.md  state-of-the-project.md  termux-bridge.md  tools.md
docs/smoke-runs/: README.md
docs/superpowers/plans/: 2026-07-10-provider-mode-selection.md  2026-07-14-smart-home-runtime-implementation.md  2026-07-14-smart-speaker-audit-and-docs.md  2026-07-14-smart-speaker-completion.md  2026-07-15-final-smart-speaker-gates.md  2026-07-15-remaining-smart-speaker-work.md
docs/superpowers/specs/: 2026-07-10-provider-mode-selection-design.md  2026-07-15-remaining-smart-speaker-work-design.md
gradle/: libs.versions.toml
(+651 files in other folders)
